@@ -29,6 +29,7 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar.%" />
+	<release tarname="mingwrt-4.0.1-1-mingw32-dev.tar.lzma" />
 	<release tarname="mingwrt-4.0.0-1-mingw32-dev.tar.lzma" />
 	<!-- The default source and licence name changed so we must -->
 	<!-- specify the original. -->
@@ -55,6 +56,7 @@
       </component>
 
       <component class="dll">
+	<release tarname="mingwrt-4.0.1-1-mingw32-dll.tar.lzma" />
 	<release tarname="mingwrt-4.0.0-1-mingw32-dll.tar.lzma" />
 	<!-- The default source and licence name changed so we must -->
 	<!-- specify the original. -->
@@ -81,10 +83,12 @@
       </component>
 
       <component class="lic">
+	<release tarname="mingwrt-4.0.1-1-mingw32-lic.tar.lzma" />
 	<release tarname="mingwrt-4.0.0-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="doc">
+	<release tarname="mingwrt-4.0.1-1-mingw32-doc.tar.lzma" />
 	<release tarname="mingwrt-4.0.0-1-mingw32-doc.tar.lzma" />
       </component>
     </package>
@@ -108,6 +112,9 @@
       <licence tarname="w32api-%-mingw32-lic.tar.%" />
 
       <component class="dev">
+	<release tarname="w32api-4.0.1-1-mingw32-dev.tar.lzma" >
+	  <requires eq="mingwrt-4.0.1-1-mingw32-dev.tar.lzma" />
+	</release>
 	<release tarname="w32api-4.0.0-1-mingw32-dev.tar.lzma" >
 	  <requires eq="mingwrt-4.0.0-1-mingw32-dev.tar.lzma" />
 	</release>
@@ -136,10 +143,12 @@
       </component>
 
       <component class="lic">
+	<release tarname="w32api-4.0.1-1-mingw32-lic.tar.lzma" />
 	<release tarname="w32api-4.0.0-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="doc">
+	<release tarname="w32api-4.0.1-1-mingw32-doc.tar.lzma" />
 	<release tarname="w32api-4.0.0-1-mingw32-doc.tar.lzma" />
       </component>
     </package>
