@@ -1,3 +1,12 @@
+2013-09-14  Earnie Boyd  <earnie@users.sourceforge.net>
+
+	Publish a correction for libwinspool.a.
+
+	* mingw32/mingw32-runtime.xml:
+	(mingwrt): Add 4.0.1 release.
+	(w32api): Ditto.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
 2013-09-10  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Publish mingw-get release 0.6.1-beta-20130910-1.
